--- a/frontend/src/components/Order-Delivery/OrderDeliver.css
+++ b/frontend/src/components/Order-Delivery/OrderDeliver.css
@@ -181,7 +181,7 @@ call to action
   width: 45vw !important;
   padding-right: 15px;
   padding-left: 15px;
-  z-index: 9999;
+  z-index: 996;
 }
 
 .align-self-center {
